--- a/style/index.css
+++ b/style/index.css
@@ -1,1 +1,100 @@
-/* Add CSS styling here */
+body{
+    background-color:black;
+    color:white;
+}
+
+
+header{
+    display: flex;
+    flex-direction: column;
+
+}
+
+h1{
+    font-size: 60px;
+    margin: 20px;
+
+}
+
+nav{
+    background-color: white;
+    padding: 10px;
+    margin: 20px;
+    width: 30%;
+    font-size: 18px;
+    display: flex;
+    justify-content: space-between;
+}
+
+nav a{
+    color: black;
+    text-decoration: none;
+    margin:10px;
+}
+
+.about{
+    display:flex;
+    
+}
+
+.about img{
+   width:46%;
+   height: 400px;
+   margin: 20px 75px 20px 20px;
+}
+
+
+.about div{
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    width: 400px;
+}
+
+.about div h2{
+    font-size:40px;
+    margin: 0 0 25px 0;
+}
+
+.button{
+    background-color: white;
+    color: black;
+    border: none;
+    width: 75%;
+    padding: 5px;
+    font-size: 18px;
+    margin-bottom: 25px;
+}
+
+.about div p{
+    font-size:20px;
+}
+
+.gallery{
+    display: flex;
+    flex-wrap: wrap;
+    margin: 20px;
+}
+
+.gallery div img{
+    width: 300px;
+    margin-right: 20px;
+}
+
+footer{
+    background-color:gray;
+    display:flex;
+    flex-direction:column;
+    align-items: center;
+    padding: 50px;
+}
+
+footer h2{
+    font-size: 40px;
+    margin: 0 0 20px;
+}
+
+
+footer .button{
+    width:200px;
+}
