--- a/style/index.css
+++ b/style/index.css
@@ -34,7 +34,7 @@ header{
 }
 
 h1{
-    font-size: 60px;
+    font-size: 3.75rem;
     margin: 20px;
     font-family:'Noto Bold', sans-serif;
     margin: 20px 20px 20px 0;
@@ -55,7 +55,6 @@ nav a{
     color: black;
     text-decoration: none;
     margin:10px;
-    border:5px solid black;
     padding:10px;
     margin:25px;
     border-radius:25px;
@@ -89,11 +88,11 @@ nav a:first-child{
     display:flex;
     flex-direction:column;
     justify-content:center;
-    width: 400px;
+    width: 25rem;
 }
 
 .about div h2{
-    font-size:40px;
+    font-size:2.5rem;
     margin: 0 0 25px 0;
     font-family:'Noto Bold', sans-serif;
 }
@@ -104,7 +103,7 @@ nav a:first-child{
     border: none;
     width: 75%;
     padding: 5px;
-    font-size: 18px;
+    font-size: 1.2rem;
     margin-bottom: 25px;
     border-radius:25px;
 }
@@ -114,7 +113,8 @@ nav a:first-child{
 }
 
 .about div p{
-    font-size:20px;
+    font-size:1.3rem;
+    line-height:1.6rem;
 }
 
 /*project gallery*/
@@ -159,4 +159,43 @@ footer h2{
 
 footer .button{
     width:200px;
+}
+
+/*media queries*/
+
+@media (max-width:800px){
+
+    header{
+        align-items:center;
+    }
+
+    h1{
+        margin:30px 0;
+    }
+
+    nav{
+        flex-direction:column;
+        justify-content:center;
+        
+    }
+
+    nav a{
+        margin:5px 0;
+        text-align:center;
+    }
+
+    .about{
+        flex-direction:column;
+        align-items:center;
+    }
+
+    .about img{
+        margin:30px 0;
+    }
+
+    .about div{
+        align-items:center;
+    }
+
+
 }
