--- a/style/index.css
+++ b/style/index.css
@@ -126,8 +126,8 @@ nav a:first-child{
 }
 
 .gallery div img{
-    width: 300px;
-    margin-right: 20px;
+    width: 18.75rem;
+    
 }
 
 .gallery div img:hover{
@@ -195,6 +195,10 @@ footer .button{
 
     .about div{
         align-items:center;
+    }
+
+    .gallery{
+        justify-content:space-evenly;
     }
 
 
