--- a/style/index.css
+++ b/style/index.css
@@ -122,6 +122,7 @@ nav a:first-child{
 .gallery{
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
     margin-top: 30px;
 }
 
@@ -147,6 +148,7 @@ footer{
     flex-direction:column;
     align-items: center;
     padding: 50px;
+    margin-top:50px;
 }
 
 footer h2{
@@ -202,4 +204,19 @@ footer .button{
     }
 
 
+}
+
+@media (max-width:500px){
+
+    body{
+        max-width:50rem;
+    }
+
+    .about img{
+        width:100%;
+    }
+
+    footer h2{
+        text-align:center;
+    }
 }
